2011-09-28  Tom Sepez  <tsepez@chromium.org>

        Revert change which broke displaying end script tags in view-source, instead
        deal with any trailing </script> tag included by mistake in the XSSAuditor
        itself.  Correct tests to detect the missing close tags.
        https://bugs.webkit.org/show_bug.cgi?id=68898

        Reviewed by Adam Barth.

        * fast/frames/resources/viewsource-frame-2.html:
        * fast/frames/viewsource-plain-text-tags-expected.txt:
        * fast/frames/viewsource-plain-text-tags.html:

2011-09-28  Antaryami Pandia  <antaryami.pandia@motorola.com>

        Reflected attribute input.size wraps on negative values (Chrome), or
        returns them (Safari).
        https://bugs.webkit.org/show_bug.cgi?id=44886

        Reviewed by Darin Adler.

        * fast/dom/HTMLInputElement/input-size-attribute-expected.txt: Added.
        * fast/dom/HTMLInputElement/input-size-attribute.html: Added.
        * fast/dom/HTMLInputElement/script-tests/size-attribute.js:
        * fast/dom/HTMLInputElement/size-attribute-expected.txt:

2011-09-28  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Add support for search in single resource to page agent.
        https://bugs.webkit.org/show_bug.cgi?id=68998

        Reviewed by Pavel Feldman.

        * http/tests/inspector/search/search-in-resource-expected.txt: Added.
        * http/tests/inspector/search/search-in-resource.html: Added.
        * http/tests/inspector/search/search-in-resources.html:
        * http/tests/inspector/search/search-test.js:
        (initialize_SearchTest.InspectorTest.dumpSearchResults):
        (initialize_SearchTest.InspectorTest.dumpSearchMatches):
        (initialize_SearchTest):

2011-09-28  Oliver Varga  <voliver@inf.u-szeged.hu>

        [WK2] SVG animation pause API missing
        https://bugs.webkit.org/show_bug.cgi?id=63396

        Reviewed by Csaba Osztrogonác.
