@@ -575,6 +575,31 @@ void DumpRenderTreeSupportGtk::confirmComposition(WebKitWebView* webView, const 
     editor->confirmComposition();
 }
 
+void DumpRenderTreeSupportGtk::doCommand(WebKitWebView* webView, const char* command)
+{
+    g_return_if_fail(WEBKIT_IS_WEB_VIEW(webView));
+    Frame* frame = core(webView)->focusController()->focusedOrMainFrame();
+    if (!frame)
+        return;
+
+    Editor* editor = frame->editor();
+    if (!editor)
+        return;
+
+    String commandString(command);
+    // Remove ending : here.
+    if (commandString.endsWith(":", true))
+        commandString = commandString.left(commandString.length() - 1);
+
+    // Make the first char in upper case.
+    String firstChar = commandString.left(1);
+    commandString = commandString.right(commandString.length() - 1);
+    firstChar.makeUpper();
+    commandString.insert(firstChar, 0);
+
+    editor->command(commandString).execute();
+}
+
 bool DumpRenderTreeSupportGtk::firstRectForCharacterRange(WebKitWebView* webView, int location, int length, cairo_rectangle_int_t* rect)
 {
     g_return_val_if_fail(WEBKIT_IS_WEB_VIEW(webView), false);
