@@ -1,3 +1,13 @@
+2011-09-28  Kaustubh Atrawalkar  <kaustubh@motorola.com>
+
+        [Gtk] Implement textInputController.doCommand
+        https://bugs.webkit.org/show_bug.cgi?id=66496
+
+        Reviewed by Martin Robinson.
+
+        * DumpRenderTree/gtk/TextInputController.cpp:
+        (doCommandCallback): Callback function for textInputController.doCommand
+
 2011-09-28  David Levin  <levin@chromium.org>
 
         watchlist: Suggest corrections for typos and improve error message consistency.
